Updates to todo list

--- a/emacs.d/todo.org
+++ b/emacs.d/todo.org
@@ -1,7 +1,5 @@
 Items left to do for setting up new emacs install:
 
-* latexmk? (C-0 compiling?)
-** don't want to lose some of the sweet functionality I have now (forward searching to pdf)
 * list of items that make the emacs install not port so well (look into in spare time)
 ** fill-column-indicator plugin
 *** downloaded this plugin and placed the directory in .emacs.d/el-get/fill-column-indicator/
@@ -20,3 +18,4 @@ Items left to do for setting up new emacs install:
 *** currently load up solarized with color-face-settings.el in settings
 *** [2015-02-01 OLD] heres the /important/ part: in color-face-settings.el, I set the custom theme load path to a directory in .emacs.d/el-get/ called custom-themes/. The el-get/ directory is what is set in .emacs as the plugin directory, meaning that the automatic download of plugins defined in el-get-settings.el are placed in el-get. Originally, color-theme-solarized was in that package list to download, and would have been installed right in .emacs.d/el-get/, but I cloned the solarized GitHub repo inside of custom-themes/ instead. This allowed me to have more than one custom theme in the custom theme load path, instead of what was originally set for the custom theme load path: "color-theme-solarized". I think this is better, but I'm just not quite sure how to make this easily portable. I think modifying the el-get-settings.el file somehow, or creating oen similar to it, with a separate directory from el-get, that will house all the specified color theme packages that need to be downloaded. I just didn't have time to go through that file and understand it well enough to modifer/recreate it.
 *** the latest setup was to add the color-themes package to the el-get-settings.el file to ensure the computer onto which emacs is being run has that package loaded. This is important for all other color themes besides my custom themes. I have emacs intially load solarized via color-face-settings.el by directing the custom theme load path to .emacs.d/el-get/custom-themes/emacs-color-theme-solarized/. Ideally this custom theme load path would have other custom themes in it that could be loaded. Then, the color theme switching (with the f5 key) takes place in color-theme-switching-settings.el. Here I have to require color-themes so emacs knows I'm going to reference themes in that package. Then, the strange part is that before I can again reference the solarized theme that I /thought/ I put in the custom-theme-load-path back in color-face-settings.el, I had to 'load up' the actual color-theme-solarized.el file, which resides in the directory pointed to by the variable custom-theme-load-path. This is the part that I'd really like understand and cleanup first, and then I could figure out how to get emacs-color-theme-solarized to auto install in a fresh install (as stated in the above, outdated bullet point). For now, it works like I want it to, so that's great!
+** auctex-latexmk.el
